@@ -36,7 +36,7 @@ public class CamadaPersistencia {
         empresa.setRazaoSocial("João da Silva 41952519000157");
         empresa.setTipo(TipoEmpresa.MEI);
         empresa.setDataFundacao(new Date());
-        empresa.setRamoAtividade(listaDeRamoAtividades.getFirst());
+        empresa.setRamoAtividade(listaDeRamoAtividades.get(0));
 
         // Salvando a empresa
         empresas.guardar(empresa);
